k8sconfig/go-service/go-platformservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: go-platform-service
spec:
  type: LoadBalancer
  selector:
    app: go-middleware-2
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
