k8sconfig/go-service/go-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: go-service
spec:
  selector:
    app: go-service
  ports:
    - name: http
      port: 2050
