k8sconfig/go-service/go-stateservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: go-stateservice
spec:
  type: LoadBalancer
  selector:
    app: go-middleware-1
  ports:
    - name: http
      protocol: TCP
      port: 7070
      targetPort: 7070
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
